fix weird alignments

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -661,7 +661,7 @@ input, select, textarea {
 		display: -ms-flex;
 		justify-content: flex-start;
 		align-items: center;
-		width: 33%;
+		width: 25%;
 		margin: 0.5rem;
 		transition: 1s;
 	}
@@ -679,7 +679,7 @@ input, select, textarea {
 	.devicon {
 		background-color: rgba(255, 255, 255, 0.075);
 		color: rgba(255, 255, 255, 0.85);
-		font-size: 2rem;
+		font-size: 1rem;
 		padding: 1rem;
 		border-radius: 50%;
 	}
@@ -704,13 +704,25 @@ input, select, textarea {
 		.skill-text {
 			transition: 1s;
 			font-size: 0.65rem;
+			margin-left: 0;
 			margin-top: 5px;
+			letter-spacing: 0;
+			text-align: center;
+			overflow-wrap: break-word;
+			word-break: normal;
+			width: 100%;
+		}
+
+		.skills-icons-sub {
+			align-items: flex-start;
 		}
 
 		.skill-container {
-			justify-content: center;
+			justify-content: flex-start;
 			flex-direction: column;
+			align-items: center;
 			transition: 1s;
+			min-width: 0;
 		}
 	}
 
@@ -2023,18 +2035,56 @@ input, select, textarea {
 }
 
 .icons-container li {
-	font-size: 1.5rem;
+	font-size: 1.25rem;
+	justify-content: center;
+	align-items: center;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.icons-text {
+	font-size: 0.7rem;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: center;
+	letter-spacing: 1.5px;
+}
+
+@media screen and (max-width: 530px) {
+	.icons-container {
+		margin: 15px;
+	}
+
+	.icons-container li {
+		font-size: 1rem;
+		margin-left: 4px;
+		margin-right: 4px;
+	}
+
+	ul.icons-container li a {
+		height: 2.25rem;
+		width: 2.25rem;
+		line-height: 2.25rem;
+	}
+
+	.icons-text {
+		font-size: 0.6rem;
+		letter-spacing: 0.5px;
+	}
 }
 
 /* Page Flip Navigation */
 
 .page-flip-container {
-	width: 100%;
+	position: absolute;
+	bottom: calc(-3.5rem - 50px);
+	left: 0;
+	right: 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
 	align-items: center;
-	margin-top: 15px;
+	padding-bottom: 25px;
 }
 
 .no-page {
